--- a/MachineLearningInadimplencia.ipynb
+++ b/MachineLearningInadimplencia.ipynb
@@ -1,18 +1,13 @@
+#R1550
+
 {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Será Que Seu Cliente Vai Te Pagar? Usando Machine Learning Para Prever Inadimplência"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://mariofilho.com/sera-que-seu-cliente-vai-te-pagar-usando-machine-learning-para-prever-inadimplencia/"
-   ]
+    "## Usando Machine Learning Para Prever Inadimplência"
+ 
   },
   {
    "cell_type": "code",
